--- a/src/index.css
+++ b/src/index.css
@@ -4,14 +4,15 @@
 
 input[type='text'],
 input[type='password'],
-input[type='email'] {
+input[type='email'],
+input[type='number']
+textarea {
   @apply w-full border my-1 py-2 px-3 rounded-2xl;
 }
 
 button {
   @apply bg-gray-300;
 }
-
 
 button.primary {
   @apply bg-primary p-2 w-full text-white rounded-2xl;
